src/ducks/categories/styles.styl
@require '~styles/breakpoints.styl'
@require '~styles/mixins.styl'

.bnk-cat-top
    display         flex
    flex-direction  row
    flex-wrap wrap

    .bnk-cat-form
        flex-basis 50%

        .bnk-cat-filter
        .bnk-cat-figure
            padding 2rem 0 0

        .bnk-cat-filter
            > span
                margin-right 1em
            > label
                font-size .8em
                position absolute
                line-height 24px

    .bnk-cat-chart
        flex-basis 50%
        margin-top -100px

+small-screen()
    .bnk-cat-top
        .bnk-cat-form
            flex-basis 100%

        .bnk-cat-chart
            flex-basis 100%
            margin-top 0

// Table
.bnk-table-category
    @extend $full-width-table

    tbody tr
        cursor  pointer


    .bnk-table-category-category
        text-transform capitalize

    .bnk-table-percentage
        text-align right

    .bnk-table-operation
        text-align right

    .bnk-table-amount
    .bnk-table-total
        text-align right

    .bnk-table-chevron
        background-position center
        background-repeat no-repeat
        transition all .2s

    .bnk-table-row
    .bnk-table-row--uncollapsed
        color charcoal-grey

        .bnk-table-percentage
            font-weight bold

    .bnk-table-row
        .bnk-table-chevron
            background-image embedurl('../../assets/icons/icon-chevron-down.svg')

    .bnk-table-row--uncollapsed
    .bnk-table-row--uncollapsed:hover
        .bnk-table-chevron
            background-image embedurl('../../assets/icons/icon-chevron-down-active.svg')
            transform   rotate3d(1, 0, 0, 180deg)

    +small-screen('min')
        .bnk-table-category-category
            maxed-flex-basis 50%

        .bnk-table-percentage
            maxed-flex-basis 10%

        .bnk-table-operation
            maxed-flex-basis 10%

        .bnk-table-total
            maxed-flex-basis 30%

    +medium-screen('min')
        .bnk-table-category-category
            maxed-flex-basis 30%
        .bnk-table-percentage
            maxed-flex-basis 10%
        .bnk-table-operation
            maxed-flex-basis 10%
        .bnk-table-amount
        .bnk-table-total
            maxed-flex-basis 14%
        .bnk-table-chevron
            maxed-flex-basis 5%

    // All icons and classes for categories types

    categories = kids dailyLife educationAndTraining health homeAndRealEstate incomeCat activities excludeFromBudgetCat services tax transportation goingOutAndTravel uncategorized

    getCatBkg(categoryLabel)
        icon = '../../assets/icons/categories/icon-cat-%s.svg' % categoryLabel
        background-image embedurl(icon)

    for category in categories
        .bnk-table-category--{category}
            getCatBkg(category)

.bnk-category-total-mobile
    min-width 5rem

